--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #145873;
-  --light: #5cabcb;
+  --light: #84e2ff;
   --secondary: #b4b4b4;
   --tertiary: #0f3d59;
   --accent: #ff7d00;
@@ -118,8 +118,24 @@ main {
   /* height: auto; */
 }
 .productlist article a {
+  font-size: var(--fs-p);
+  font-weight: var(--fw-m);
   margin-top: auto;
+  color: inherit;
+  margin-bottom: var(--space-xs);
+  text-underline-offset: 5px;
+  text-decoration-color: var(--secondary);
+  text-decoration-thickness: 2px;
 }
+.productlist article a:hover {
+  text-decoration-color: var(--black);
+}
+
+/* @media (hover: hover) {
+  a:hover {
+    text-decoration-color: var(--dark);
+  }
+} */
 .productlist article h3 {
   font-size: var(--fs-c);
   margin-top: var(--space-xs);
@@ -167,6 +183,79 @@ main {
   padding: var(--space-sm);
   z-index: 100;
   translate: 0 200%;
+}
+/* Product */
+.one_product main {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: var(--space-sm);
+}
+.one_product ol {
+  display: flex;
+  gap: var(--space-lg);
+  grid-area: 1/1/2/3;
+  list-style: none;
+}
+.one_product ol a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.breadcrumbs li::after {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  content: ">";
+  transition: all 0.3s;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 14"><path fill="none" stroke="white" d="M.8 12.87l7.5-6-7.5-6"></path></svg>');
+  background-repeat: no-repeat;
+}
+.one_product img {
+  width: 100%;
+  height: auto;
+  grid-column: 1;
+  grid-row: 2/4;
+}
+
+.purchaseBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: var(--dark) 0px 5px 15px 0px;
+  /* background: var(--light); */
+  background: var(--secondary);
+  width: fit-content;
+  padding: var(--space-sm);
+  border-radius: var(--br-l);
+}
+.purchaseBox h3 {
+  font-size: var(--fs-3);
+  color: white;
+}
+.purchaseBox form label {
+  gap: var(--space-lg);
+}
+.product select {
+  min-width: 1000px;
+}
+.purchaseBox button {
+  display: block;
+  font-family: var(--ff);
+  font-weight: var(--fw-m);
+  font-size: var(--fs-c);
+  color: white;
+  background: #00d700;
+  margin-top: var(--space-xs);
+  min-width: 50%;
+  padding: var(--space-sm);
+  border-radius: var(--br-s);
+  border: 0;
+}
+.info {
+  grid-column: 2;
+  box-shadow: var(--dark) 0px 5px 15px 0px;
 }
 
 /* Header */
